src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AM_Status_History__c</fullName>
        <label>AM Status History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AM_Status_Text__c</fullName>
        <formula>TEXT(Free_Offer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Status - Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Assigned_User__c</fullName>
        <formula>Business_Account_Manager__r.Is_Account_Manager__c</formula>
        <label>Account Manager Assigned User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Team__c</fullName>
        <formula>TEXT(Business_Account_Manager__r.Account_Team__c)</formula>
        <label>Account Manager Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>for business development users - determine bd and partner sales company account status</description>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attorney_Advice__c</fullName>
        <label>Attorney Advice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Consult__c</fullName>
        <label>Atty Consult #</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Tax_Consult_Log_All__c</fullName>
        <label>Atty/Tax Consult Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Atty_Tax_Consult_Log__c</fullName>
        <label>Last Atty/Tax Consult Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Assignment__c</fullName>
        <label>Initial Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biz_Charge__c</fullName>
        <label>Biz Charge-AMEX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Checking__c</fullName>
        <label>Biz Checking-BofA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Credit__c</fullName>
        <label>Biz Credit-DNB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Ins__c</fullName>
        <label>Biz Ins-Bolt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Plans__c</fullName>
        <label>Biz Plans-Palo Alto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Printing__c</fullName>
        <label>Biz Printing-PrintRunner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Quickbooks_Online__c</fullName>
        <label>Biz Quickbooks Online</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Starter_BAM__c</fullName>
        <formula>IF(Business_Account_Manager__r.Is_Account_Manager__c &amp;&amp; (Service_Status2__c=&quot;Active&quot; || Service_Status2__c=&quot;Supervised&quot;), IMAGE( &quot;/servlet/servlet.FileDownload?file=015G0000001vRck&quot;, &quot;image from Documents tab&quot;) +&apos; &apos; +Business_Account_Manager__r.FirstName +&apos; &apos;+ Business_Account_Manager__r.LastName+&apos;, x&apos;+ Business_Account_Manager__r.Extension, null)</formula>
        <label>Account Manager Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biz_Toll_Free__c</fullName>
        <label>Biz Toll Free #-DaVinci</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies who the Account Manager is on the account</description>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Frequency__c</fullName>
        <label>Contact Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Heavy</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Light</fullName>
                </value>
                <value>
                    <fullName>Only Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Time__c</fullName>
        <label>Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Morning</fullName>
                </value>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Midday</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Late Night</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Opt_In_Total__c</fullName>
        <formula>IF(ISPICKVAL(Free_Offer__c, &quot;Yes&quot;), 1, null)</formula>
        <label>Customer Opt-In Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Package_Total__c</fullName>
        <formula>IF(ISPICKVAL( Paid_Offer__c , &quot;Yes&quot;), 1, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Package Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Time_AM_Type__c</fullName>
        <description>Set datetime when AM Type field changes for reporting use</description>
        <label>Date/Time AM Type</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Acct_Mgr_Assigned__c</fullName>
        <description>Date/time an account manager assigned to the account.  Only for first time.</description>
        <label>Date/Time Acct Mgr First Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Acct_Mgr_Last_Modified__c</fullName>
        <label>Date/Time Acct Mgr Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Acct_Name_Changed__c</fullName>
        <description>Stamp time when Login/Email has not changed by Integration User</description>
        <label>Date/Time Acct Name Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Latest_Acct_Mgr_Assigned__c</fullName>
        <label>Date/Time Acct Mgr Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Modified__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Date/Time Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Not_Active__c</fullName>
        <label>Date/Time Not Active</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opt_In__c</fullName>
        <label>Date/Time Active</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Package_Offer__c</fullName>
        <label>Date/Time Package Offer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Trial_15__c</fullName>
        <label>Date/Time Trial 15</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Trial_30__c</fullName>
        <label>Date/Time Trial 30</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Trial_60__c</fullName>
        <label>Date/Time Trial 60</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Active__c</fullName>
        <formula>Date_Time_Not_Active__c -  Date_Time_Opt_In__c</formula>
        <label>Days Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Designated_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Designated Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Free_Offer__c</fullName>
        <label>AM Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Active</fullName>
                </value>
                <value>
                    <fullName>Not Yet Contacted</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Trial 15</fullName>
                </value>
                <value>
                    <fullName>Trial 30</fullName>
                </value>
                <value>
                    <fullName>No Mas</fullName>
                </value>
                <value>
                    <fullName>Opt-Out - Customer</fullName>
                </value>
                <value>
                    <fullName>Opt-Out - EOM</fullName>
                </value>
                <value>
                    <fullName>Opt-Out - Bandwidth</fullName>
                </value>
                <value>
                    <fullName>Completed - Sales Starter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homeowner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeowner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_soon_to_start_company__c</fullName>
        <label>How soon to start company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>As Soon As Possible</fullName>
                </value>
                <value>
                    <fullName>Within Next 30 Days</fullName>
                </value>
                <value>
                    <fullName>Within Next 6 months</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_NPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LLC NPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LZ_Product_Services__c</fullName>
        <description>This is for the business development account page layout</description>
        <label>LZ Product / Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BAP</fullName>
                </value>
                <value>
                    <fullName>Copyright</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>Incorporation</fullName>
                </value>
                <value>
                    <fullName>LAP</fullName>
                </value>
                <value>
                    <fullName>Last Will</fullName>
                </value>
                <value>
                    <fullName>Legal Forms</fullName>
                </value>
                <value>
                    <fullName>Living Trust</fullName>
                </value>
                <value>
                    <fullName>Living Will</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>Name Change</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Patent</fullName>
                </value>
                <value>
                    <fullName>Pet Protection</fullName>
                </value>
                <value>
                    <fullName>Trademark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Contact_Status__c</fullName>
        <description>The last update of the last contact status on any orders associated with the account</description>
        <label>Last Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No-VM</fullName>
                </value>
                <value>
                    <fullName>No-NM</fullName>
                </value>
                <value>
                    <fullName>No-Email</fullName>
                </value>
                <value>
                    <fullName>No-Final</fullName>
                </value>
                <value>
                    <fullName>Yes-SNE</fullName>
                </value>
                <value>
                    <fullName>Yes-Talk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Delivery_Date__c</fullName>
        <description>The order delivery date from the latest update on any orders associated with this account.</description>
        <label>Last Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Fulfillment_Status__c</fullName>
        <description>Order fulfillment status from the last update on any order associated to the account</description>
        <label>Last Fulfillment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sale</fullName>
                </value>
                <value>
                    <fullName>Not Yet Started</fullName>
                </value>
                <value>
                    <fullName>Entity Name Avail</fullName>
                </value>
                <value>
                    <fullName>Pre-Filing Prob</fullName>
                </value>
                <value>
                    <fullName>Sent for Sig</fullName>
                </value>
                <value>
                    <fullName>Sent to SOS</fullName>
                </value>
                <value>
                    <fullName>Docs Rec’d</fullName>
                </value>
                <value>
                    <fullName>Docs Backends</fullName>
                </value>
                <value>
                    <fullName>Sent to Cust</fullName>
                </value>
                <value>
                    <fullName>TM Search</fullName>
                </value>
                <value>
                    <fullName>TM G&amp;S</fullName>
                </value>
                <value>
                    <fullName>TM L&amp;S</fullName>
                </value>
                <value>
                    <fullName>TM App Prep</fullName>
                </value>
                <value>
                    <fullName>TM App Filed</fullName>
                </value>
                <value>
                    <fullName>Office Action</fullName>
                </value>
                <value>
                    <fullName>TM SOU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Order_Number__c</fullName>
        <label>Last Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point__c</fullName>
        <description>Last update of the last touch point on any orders under the account</description>
        <label>Last Touch Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post Consult</fullName>
                </value>
                <value>
                    <fullName>Pre-Filing Problem</fullName>
                </value>
                <value>
                    <fullName>Post-Filing Problem</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Initial Contact</fullName>
                </value>
                <value>
                    <fullName>Entity Name Avail</fullName>
                </value>
                <value>
                    <fullName>Sent for Sig</fullName>
                </value>
                <value>
                    <fullName>Sent to SOS</fullName>
                </value>
                <value>
                    <fullName>Checklist</fullName>
                </value>
                <value>
                    <fullName>Docs Rec’d</fullName>
                </value>
                <value>
                    <fullName>Sent to Cust</fullName>
                </value>
                <value>
                    <fullName>Packet Review</fullName>
                </value>
                <value>
                    <fullName>Post Filing Check In</fullName>
                </value>
                <value>
                    <fullName>TM Search Results</fullName>
                </value>
                <value>
                    <fullName>TM App Prep</fullName>
                </value>
                <value>
                    <fullName>TM App Filed</fullName>
                </value>
                <value>
                    <fullName>TM 3/4 Month</fullName>
                </value>
                <value>
                    <fullName>TM 6/8 Month</fullName>
                </value>
                <value>
                    <fullName>TM Intent to Use 8 Month</fullName>
                </value>
                <value>
                    <fullName>TM Use Commerce 8 Month</fullName>
                </value>
                <value>
                    <fullName>TM 10 Month</fullName>
                </value>
                <value>
                    <fullName>TM 13 Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_WTR__c</fullName>
        <label>Last WTR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_Level_1__c</fullName>
        <label>Legacy Source Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Import Tools</fullName>
                </value>
                <value>
                    <fullName>Public API</fullName>
                </value>
                <value>
                    <fullName>CRM Console</fullName>
                </value>
                <value>
                    <fullName>End-User pages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Source_Level_2__c</fullName>
        <label>Legacy Source Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Techmail - Service Mailbox</fullName>
                </value>
                <value>
                    <fullName>Contact Import</fullName>
                </value>
                <value>
                    <fullName>Public XML API</fullName>
                </value>
                <value>
                    <fullName>Incident Editor</fullName>
                </value>
                <value>
                    <fullName>Ask A Question</fullName>
                </value>
                <value>
                    <fullName>Feedback on Answers</fullName>
                </value>
                <value>
                    <fullName>Create login</fullName>
                </value>
                <value>
                    <fullName>Contact Editor</fullName>
                </value>
                <value>
                    <fullName>RightNow Live Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Ins__c</fullName>
        <label>Life Ins-Accuquote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MyPRGenie__c</fullName>
        <label>MyPRGenie</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_AM_Accounts__c</fullName>
        <formula>if( Business_Account_Manager__c =$User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My AM Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Consult__c</fullName>
        <description>The latest scheduled consultation datetime</description>
        <label>Next Scheduled Consult</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Free_Reason__c</fullName>
        <label>No Opt-In Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Wanted</fullName>
                </value>
                <value>
                    <fullName>Has Attorney</fullName>
                </value>
                <value>
                    <fullName>Has CPA</fullName>
                </value>
                <value>
                    <fullName>Is Attorney</fullName>
                </value>
                <value>
                    <fullName>Is CPA</fullName>
                </value>
                <value>
                    <fullName>Multi - Biz Owner</fullName>
                </value>
                <value>
                    <fullName>Bad Experience</fullName>
                </value>
                <value>
                    <fullName>Legacy Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>